# pivotsearch

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CLAUDE.zh-CN.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.loop/: STATE.yaml  decisions.jsonl  gaps.yaml  ideation.md  learnings.yaml  refined-prompt.md  timeline.jsonl
.planning/: PROJECT.md  ROADMAP.md  STATE.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: error.rs  indexer.rs  lib.rs  parser.rs  searcher.rs  types.rs  watcher.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: doc_builder.rs  incremental.rs  lib.rs  schema.rs  tokenizer.rs  tree_index.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: archive.rs  docx.rs  epub.rs  html.rs  lib.rs  markdown.rs  pdf.rs  pptx.rs  registry.rs  text.rs  xlsx.rs
crates/psearch/: Cargo.toml
crates/psearch/src/: main.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs  multi.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
docs/: 00-index.md  01-overview.md  02-architecture.md  03-tech-selection.md  04-design-logic.md  design-i18n-v0.5.0.md
openspec/changes/pivotsearch-v1-local-search/: design.md  proposal.md  tasks.md
openspec/changes/pivotsearch-v1-local-search/specs/core-index-schema/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/desktop-ui/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/file-watcher/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/incremental-index/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/indexing-queue/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/ocr-pipeline/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/parser-registry/: spec.md
openspec/changes/pivotsearch-v1-local-search/specs/search-engine/: spec.md
scripts/: bench.sh  fetch-pdfium.sh  prepare-sidecar.mjs  prepare-sidecar.sh
src/: App.vue  api.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src/composables/: useI18n.ts
src/locales/: en.ts  zh-CN.ts
src/styles/: base.css  theme.css
