[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/parser",
    "crates/index",
    "crates/watcher",
    "crates/queue",
    "crates/search",
    "crates/ocr",
    "crates/core",
    "crates/cli",
]
# src-tauri 是独立 Tauri 项目（有自己的 target 和 tauri-build），排除在 workspace 外
exclude = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/yourname/pivotsearch"
homepage = "https://github.com/yourname/pivotsearch"
description = "Cross-platform local full-text search desktop app"
authors = ["pivotsearch contributors"]

[workspace.dependencies]
# 内部 crate 间依赖（统一版本）
pivotsearch-contracts = { path = "crates/contracts", version = "0.1.0" }
pivotsearch-parser    = { path = "crates/parser",    version = "0.1.0" }
pivotsearch-index     = { path = "crates/index",     version = "0.1.0" }
pivotsearch-search    = { path = "crates/search",    version = "0.1.0" }
pivotsearch-core      = { path = "crates/core",      version = "0.1.0" }

# 全文引擎 + 中文分词
tantivy = "0.24"
jieba-rs = "0.7"

# 文档解析（按 crate 引入，这里集中声明版本）
# Phase 1 起逐步引入，避免 Phase 0 编译重依赖

# 元数据存储
rusqlite = { version = "0.31", features = ["bundled"] }

# 文件遍历
walkdir = "2.5"

# 序列化 / 错误 / 日志
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"

# 并发
parking_lot = "0.12"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
