[package]
name = "pivotsearch-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pivotsearch CLI（开发期调试用）"

[[bin]]
name = "pivotsearch"
path = "src/main.rs"

[dependencies]
pivotsearch-contracts = { workspace = true }
pivotsearch-core = { workspace = true }
pivotsearch-parser = { workspace = true }
pivotsearch-index = { workspace = true }
pivotsearch-search = { workspace = true }
tantivy = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
