[package]
name = "pivotsearch-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pivotsearch 索引层：Tantivy schema + Document 组装 + 增量 + tree_index"

[dependencies]
pivotsearch-contracts = { workspace = true }
tantivy = { workspace = true }
jieba-rs = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
