[package]
name = "pivotsearch-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pivotsearch OCR 层：Tesseract 集成（feature gate 可选）"

[dependencies]
pivotsearch-contracts = { workspace = true }

[features]
default = []
# OCR 为可选能力，默认不编译。cargo build --features ocr 启用。
# Phase 4 引入 kreuzberg-tesseract 依赖（feature gate）
ocr = []
