[package]
name = "pivotsearch-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pivotsearch 解析层：Parser 注册表 + 各格式解析器"

[dependencies]
anyhow.workspace = true
calamine = "0.30.1"
chardetng = "1.0.0"
docx-rs = "0.4.20"
encoding_rs = "0.8.35"
infer = "0.19.0"
pdfium-render = { version = "0.9.2", features = ["thread_safe"] }
pivotsearch-contracts = { workspace = true }
pulldown-cmark = "0.13.4"
scraper = "0.27.0"

[dev-dependencies]
tempfile = "3"
