[package]
name = "pivotsearch-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pivotsearch 监听层：notify + 防抖 + 事件过滤 + mtime 校验"

[dependencies]
pivotsearch-contracts = { workspace = true }
notify = "6.1"
notify-debouncer-full = "0.3"
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
